# C-sockets-client-server

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  queue.h  socketutil.h
lib/: socketutil.c
src/: client.c  queue.c  server.c  socketutil.c
